--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <link rel="stylesheet" href="style.css" />
     <title>React App</title>
   </head>
   <body>
